assets/css/modules/_dashboard.scss
//
// Dashboard
//
$dashboard-shadow:  0 2px 2px 0 rgba(0, 0, 0, .15);
$dashboard-bg: #ffffff;
$dashboard-border-radius: 2px;
$dashboard-color: #2d2d2d;
$dashboard-padding: 1rem;
$dashboard-gutter: 10px;

.dashboard {
    display: flex;
    flex-wrap: wrap;
    margin: -($dashboard-gutter / 2);
}
.dashboard-item {
    margin: $dashboard-gutter / 2;
    display: flex;
    flex-direction: column;
    border-radius: $dashboard-border-radius;
    color: $dashboard-color;
    background-color: $dashboard-bg;
    overflow: hidden;
    box-shadow: $dashboard-shadow;
}
.dashboard-item-title {
    font-size: 1.2rem;
    padding: $dashboard-padding;
    padding-bottom: 0;
    margin-bottom: 0;
}
.dashboard-item-body {
    flex-grow: 1;
    padding: $dashboard-padding;
    > *:last-child {
        margin-bottom: 0;
    }
}
.dashboard-item-footer {
    padding: $dashboard-padding;
    padding-top: 0;
    > *:last-child {
        margin-bottom: 0;
    }
}
.dashboard-item-footer-link {
    color: inherit;
    display: inline-block;
    line-height: 1.25;
    text-decoration: none;
    border-bottom: 1px dotted;
    &:hover {
        color: inherit;
        text-decoration: none;
        border-bottom-style: solid;
    }
}
@each $breakpoint in map-keys($grid-breakpoints) {
    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
    @include media-breakpoint-up($breakpoint, $grid-breakpoints) {
        @for $i from 1 through $grid-columns {
            .dashboard-item#{$infix}-w#{$i} {
                width: calc(100% / #{$grid-columns} * #{$i} - #{$dashboard-gutter});
            }
        }
    }
}

